<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg_pg_no_12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tv_SignInn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginHorizontal="30dp"
        android:layout_gravity="start"
        android:layout_marginTop="130sp"/>
    <TextView
        android:id="@+id/tv_det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_your_registered_email_to_sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="13sp"/>
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_custom_bg"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_custom_bg"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableRight="@drawable/ic_icon_eye"
        android:hint="@string/Password"/>
    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13sp"
        android:text="@string/Forgot_Password"
        android:textColor="@color/PrimaryAppColor"
        android:textSize="20sp" />
    </LinearLayout>

</ScrollView>