<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg_pg_no_10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_SignInn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_In"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="130sp"/>
        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_your_registered_email_to_sign_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="13sp"/>
        <EditText
            android:id="@+id/et_fuln"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_custom_bg"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Udin_Samsudin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_custom_bg"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/Udin_petot_gmail_com"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_custom_bg"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/ic_icon_eye"
            android:inputType="textPassword"
            android:text="jkuhkhj"/>
        <TextView
            android:id="@+id/tv_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email has been used"
            android:textColor="@color/PrimaryAppColor"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="13sp"/>

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="13sp"
            android:text="@string/Sign_in"
            android:textColor="@color/PrimaryAppColor"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/PrimaryAppColor"
            android:textSize="20sp" app:cornerRadius="10dp"
            android:textColor="@color/white"
            android:text="@string/Sign_In"/>
        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Or"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="13sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/search"/>
            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_with_google"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>